cmake_minimum_required(VERSION 3.9)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode main.cpp Base.h
        #139.word_break/WordBreak.cpp 139.word_break/WordBreak.h
        #1.two_sum/TwoSum.cpp 1.two_sum/TwoSum.h
        #647.palindromic_substrings/PalindromicSubstrings.cpp 647.palindromic_substrings/PalindromicSubstrings.h
        #621.task_scheduler/TaskScheduler.cpp 621.task_scheduler/TaskScheduler.h
        #560.subarray_sum_equals_k/SubarraySumEqualsK.cpp 560.subarray_sum_equals_k/SubarraySumEqualsK.h
        #547.friend_circles/FriendCircles.cpp 547.friend_circles/FriendCircles.h
        #494.target_sum/TargetSum.cpp 494.target_sum/TargetSum.h
        #416.partition_equal_subset_sum/PartitionEqualSubsetSum.cpp 416.partition_equal_subset_sum/PartitionEqualSubsetSum.h
        #617.merge_two_binary_trees/MergeTwoBinaryTrees.cpp 617.merge_two_binary_trees/MergeTwoBinaryTrees.h
        #141.linked_list_cycle/LinkedListCycle.cpp 141.linked_list_cycle/LinkedListCycle.h
        #142.linked_list_cycle_2/LinkedListCycle2.cpp 142.linked_list_cycle_2/LinkedListCycle2.h
        #148.sort_list/SortList.cpp 148.sort_list/SortList.h
        #152.maximum_product_subarray/MaximumProductSubarray.cpp 152.maximum_product_subarray/MaximumProductSubarray.h
        #53.maximum_subarray/MaximumSubarray.cpp 53.maximum_subarray/MaximumSubarray.h
        #394.decode_string/DecodeString.cpp 394.decode_string/DecodeString.h
        #347.top_k_frequent_elements/TopKFrequentElements.cpp 347.top_k_frequent_elements/TopKFrequentElements.h
        #581.shortest_unsorted_continuous_subarray/ShortestUnsortedContinuousSubarray.cpp
        #581.shortest_unsorted_continuous_subarray/ShortestUnsortedContinuousSubarray.h
        #461.hamming_distance/HammingDistance.cpp 461.hamming_distance/HammingDistance.h
        #338.counting_bits/CountingBits.cpp 338.counting_bits/CountingBits.h
        #448.find_disappeared_numbers/FindDisappearedNumbers.cpp 448.find_disappeared_numbers/FindDisappearedNumbers.h
        #438.find_anagrams/FindAnagrams.cpp 438.find_anagrams/FindAnagrams.h
        #112.path_sum/PathSum.cpp 112.path_sum/PathSum.h
        #113.path_sum_2/PathSum2.cpp 113.path_sum_2/PathSum2.h
        #437.path_sum_3/PathSum3.cpp 437.path_sum_3/PathSum3.h
        #21.merge_2_sorted_lists/Merge2SortedLists.cpp 21.merge_2_sorted_lists/Merge2SortedLists.h
        #23.merge_k_sorted_lists/MergeKSortedLists.cpp 23.merge_k_sorted_lists/MergeKSortedLists.h
        #155.min_stack/MinStack.cpp 155.min_stack/MinStack.h
        #225.implement_stack_using_queues/ImplementStackUsingQueues.cpp 225.implement_stack_using_queues/ImplementStackUsingQueues.h
        #232.implement_queue_using_stacks/ImplementQueueUsingStacks.cpp 232.implement_queue_using_stacks/ImplementQueueUsingStacks.h
        #198.house_robber/HouseRobber.cpp 198.house_robber/HouseRobber.h
        #213.house_robber_2/HouseRobber2.cpp 213.house_robber_2/HouseRobber2.h
        #337.house_robber_3/HouseRobber3.cpp 337.house_robber_3/HouseRobber3.h
        #572.subtree_of_another_tree/SubtreeOfAnotherTree.cpp 572.subtree_of_another_tree/SubtreeOfAnotherTree.h
        #406.queue_reconstruction_by_height/QueueReconstructionByHeight.cpp 406.queue_reconstruction_by_height/QueueReconstructionByHeight.h
        #2.add_two_numbers/AddTwoNumbers.cpp 2.add_two_numbers/AddTwoNumbers.h
        #3.longest_substring_without_repeating_characters/LongestSubstringWithoutRepeatingCharacters.cpp 3.longest_substring_without_repeating_characters/LongestSubstringWithoutRepeatingCharacters.h
        #146.LRU_cache/LRUCache.cpp 146.LRU_cache/LRUCache.h
        #160.intersection_of_two_linked_lists/IntersectionOfTwoLinkedLists.cpp 160.intersection_of_two_linked_lists/IntersectionOfTwoLinkedLists.h
        #169.majority_element/MajorityElement.cpp 169.majority_element/MajorityElement.h
        #200.number_of_islands/NumberOfIslands.cpp 200.number_of_islands/NumberOfIslands.h
        #207.course_schedule/CourseSchedule.cpp 207.course_schedule/CourseSchedule.h
        #208.implement_trie/ImplementTrie.cpp 208.implement_trie/ImplementTrie.h
        #215.kth_largest_element_in_an_array/KthLargestElementInAnArray.cpp 215.kth_largest_element_in_an_array/KthLargestElementInAnArray.h
        #322.coin_change/CoinChange.cpp 322.coin_change/CoinChange.h 46.permutations/Permutations.cpp 46.permutations/Permutations.h
        #20.valid_arentheses/ValidParentheses.cpp 20.valid_arentheses/ValidParentheses.h
        #32.longest_valid_parentheses/LongestValidParentheses.cpp 32.longest_valid_parentheses/LongestValidParentheses.h
        #22.generate_parentheses/GenerateParentheses.cpp 22.generate_parentheses/GenerateParentheses.h
        #9.palindrome_number/PalindromeNumber.cpp 9.palindrome_number/PalindromeNumber.h
        #234.palindrome_linked_list/PalindromeLinkedList.cpp 234.palindrome_linked_list/PalindromeLinkedList.h
        #5.longest_palindromic_substring/LongestPalindromicSubstring.cpp 5.longest_palindromic_substring/LongestPalindromicSubstring.h
        #409.longest_palindrome/LongestPalindrome.cpp 409.longest_palindrome/LongestPalindrome.h
        #153.find_minimum_in_rotated_sorted_array/FindMinimumInRotatedSortedArray.cpp 153.find_minimum_in_rotated_sorted_array/FindMinimumInRotatedSortedArray.h
        #154.find_minimum_in_rotated_sorted_array_2/FindMinimumInRotatedSortedArray2.cpp 154.find_minimum_in_rotated_sorted_array_2/FindMinimumInRotatedSortedArray2.h
        #33.search_in_rotated_sorted_array/SearchInRotatedSortedArray.cpp 33.search_in_rotated_sorted_array/SearchInRotatedSortedArray.h
        #81.search_in_rotated_sorted_array_2/SearchInRotatedSortedArray2.cpp 81.search_in_rotated_sorted_array_2/SearchInRotatedSortedArray2.h
        #128.longest_consecutive_sequence/LongestConsecutiveSequence.cpp 128.longest_consecutive_sequence/LongestConsecutiveSequence.h
        #287.find_the_duplicate_number/FindTheDuplicateNumber.cpp 287.find_the_duplicate_number/FindTheDuplicateNumber.h
        #283.move_zeroes/MoveZeroes.cpp 283.move_zeroes/MoveZeroes.h
        #238.product_of_array_except_self/ProductOfArrayExceptSelf.cpp 238.product_of_array_except_self/ProductOfArrayExceptSelf.h
        #121.best_time_to_buy_and_sell_stock/BestTimeToBuyAndSellStock.cpp 121.best_time_to_buy_and_sell_stock/BestTimeToBuyAndSellStock.h
        #105.construct_binary_tree_from_preorder_and_inorder_traversal/ConstructBinaryTreeFromPreorderAndInorderTraversal.cpp 105.construct_binary_tree_from_preorder_and_inorder_traversal/ConstructBinaryTreeFromPreorderAndInorderTraversal.h
        #79.word_search/WordSearch.cpp 79.word_search/WordSearch.h
        #42.trapping_rain_water/TrappingRainWater.cpp 42.trapping_rain_water/TrappingRainWater.h
        #48.rotate_image/RotateImage.cpp 48.rotate_image/RotateImage.h
        #55.jump_game/JumpGame.cpp 55.jump_game/JumpGame.h
        #56.merge_intervals/MergeIntervals.cpp 56.merge_intervals/MergeIntervals.h
        #62.unique_paths/UniquePaths.cpp 62.unique_paths/UniquePaths.h
        #75.sort_colors/SortColors.cpp 75.sort_colors/SortColors.h
        #84.largest_rectangle_in_histogram/LargestRectangleInHistogram.cpp 84.largest_rectangle_in_histogram/LargestRectangleInHistogram.h
        #85.maximal_rectangle/MaximalRectangle.cpp 85.maximal_rectangle/MaximalRectangle.h
        #49.group_anagrams/GroupAnagrams.cpp 49.group_anagrams/GroupAnagrams.h
        #221.maximal_square/MaximalSquare.cpp 221.maximal_square/MaximalSquare.h
        #226.invert_binary_tree/InvertBinaryTree.cpp 226.invert_binary_tree/InvertBinaryTree.h
        #64.minimum_path_sum/MinimumPathSum.cpp 64.minimum_path_sum/MinimumPathSum.h
        #72.edit_distance/EditDistance.cpp 72.edit_distance/EditDistance.h
        #76.minimum_window_substring/MinimumWindowSubstring.cpp 76.minimum_window_substring/MinimumWindowSubstring.h
        #94.binary_tree_inorder_traversal/BinaryTreeInorderTraversal.cpp 94.binary_tree_inorder_traversal/BinaryTreeInorderTraversal.h
        #96.unique_binary_search_trees/UniqueBinarySearchTrees.cpp 96.unique_binary_search_trees/UniqueBinarySearchTrees.h
        #98.validate_binary_search_tree/ValidateBinarySearchTree.cpp 98.validate_binary_search_tree/ValidateBinarySearchTree.h
        #101.symmetric_tree/SymmetricTree.cpp 101.symmetric_tree/SymmetricTree.h
        #102.binary_tree_level_order_traversal/BinaryTreeLevelOrderTraversal.cpp 102.binary_tree_level_order_traversal/BinaryTreeLevelOrderTraversal.h
        #104.maximum_depth_of_binary_tree/MaximumDepthOfBinaryTree.cpp 104.maximum_depth_of_binary_tree/MaximumDepthOfBinaryTree.h
        #124.binary_tree_maximum_path_sum/BinaryTreeMaximumPathSum.cpp 124.binary_tree_maximum_path_sum/BinaryTreeMaximumPathSum.h
        #315.count_of_smaller_numbers_after_self/CountOfSmallerNumbersAfterSelf.cpp 315.count_of_smaller_numbers_after_self/CountOfSmallerNumbersAfterSelf.h
        #312.burst_balloons/BurstBalloons.cpp 312.burst_balloons/BurstBalloons.h
        #236.lowest_common_ancestor_of_a_binary_tree/LowestCommonAncestorOfABinaryTree.cpp 236.lowest_common_ancestor_of_a_binary_tree/LowestCommonAncestorOfABinaryTree.h
        #300.longest_increasing_subsequence/LongestIncreasingSubsequence.cpp 300.longest_increasing_subsequence/LongestIncreasingSubsequence.h
        #240.search_a_2d_matrix_2/SearchA2DMatrix2.cpp 240.search_a_2d_matrix_2/SearchA2DMatrix2.h
        #279.perfect_squares/PerfectSquares.cpp 279.perfect_squares/PerfectSquares.h
        #239.sliding_window_maximum/SlidingWindowMaximum.cpp 239.sliding_window_maximum/SlidingWindowMaximum.h
        #297.serialize_and_deserialize_binary_tree/SerializeAndDeserializeBinaryTree.cpp 297.serialize_and_deserialize_binary_tree/SerializeAndDeserializeBinaryTree.h
        #218.the_skyline_problem/TheSkylineProblem.cpp 218.the_skyline_problem/TheSkylineProblem.h
        #4.median_of_two_sorted_arrays/MedianOfTwoSortedArrays.cpp 4.median_of_two_sorted_arrays/MedianOfTwoSortedArrays.h
        #301.remove_invalid_parentheses/RemoveInvalidParentheses.cpp 301.remove_invalid_parentheses/RemoveInvalidParentheses.h
        #114.flatten_binary_tree_to_linked_list/FlattenBinaryTreeToLinkedList.cpp 114.flatten_binary_tree_to_linked_list/FlattenBinaryTreeToLinkedList.h
        #543.diameter_of_binary_tree/DiameterOfBinaryTree.cpp 543.diameter_of_binary_tree/DiameterOfBinaryTree.h
        #538.convert_BST_to_greater_tree/ConvertBSTToGreaterTree.cpp 538.convert_BST_to_greater_tree/ConvertBSTToGreaterTree.h
        #10.regular_expression_matching/RegularExpressionMatching.cpp 10.regular_expression_matching/RegularExpressionMatching.h
        #11.container_with_most_water/ContainerWithMostWater.cpp 11.container_with_most_water/ContainerWithMostWater.h
        #15.three_sum/ThreeSum.cpp 15.three_sum/ThreeSum.h
        #17.letter_combinations_of_a_phone_number/LetterCombinationsOfAPhoneNumber.cpp 17.letter_combinations_of_a_phone_number/LetterCombinationsOfAPhoneNumber.h
        #19.remove_nth_node_from_end_of_list/RemoveNthNodeFromEndOfList.cpp 19.remove_nth_node_from_end_of_list/RemoveNthNodeFromEndOfList.h
        #31.next_permutation/NextPermutation.cpp 31.next_permutation/NextPermutation.h
        #34.search_for_a_range/SearchForARange.cpp 34.search_for_a_range/SearchForARange.h
        #39.combination_sum/CombinationSum.cpp 39.combination_sum/CombinationSum.h
        #78.subsets/Subsets.cpp 78.subsets/Subsets.h
        #70.climbing_stairs/ClimbingStairs.cpp 70.climbing_stairs/ClimbingStairs.h
        #309.best_time_to_buy_and_sell_stock_with_cooldown/BestTimeToBuyAndSellStockWithCooldown.cpp 309.best_time_to_buy_and_sell_stock_with_cooldown/BestTimeToBuyAndSellStockWithCooldown.h
        #136.single_number/SingleNumber.cpp 136.single_number/SingleNumber.h
        #206.reverse_linked_list/ReverseLinkedList.cpp 206.reverse_linked_list/ReverseLinkedList.h
        #279.perfect_squares/PerfectSquares.cpp 279.perfect_squares/PerfectSquares.h
        #29.divide_two_integers/DivideTwoIntegers.cpp 29.divide_two_integers/DivideTwoIntegers.h
        #50.pow/Pow.cpp 50.pow/Pow.h
        #454.four_sum_2/FourSum2.cpp 454.four_sum_2/FourSum2.h
        #7.reverse_integer/ReverseInteger.cpp 7.reverse_integer/ReverseInteger.h
        #412.fizz_buzz/FizzBuzz.cpp 412.fizz_buzz/FizzBuzz.h
        #8.atoi/StringToInteger.cpp 8.atoi/StringToInteger.h
        #13.roman_to_integer/RomanToInteger.cpp 13.roman_to_integer/RomanToInteger.h
        #14.longest_common_prefix/LongestCommonPrefix.cpp 14.longest_common_prefix/LongestCommonPrefix.h
        #26.remove_duplicates_from_sorted_array/RemoveDuplicatesFromSortedArray.cpp 26.remove_duplicates_from_sorted_array/RemoveDuplicatesFromSortedArray.h
        #395.longest_substring_with_at_least_k_repeating_characters/LongestSubstringWithAtLeastKRepeatingCharacters.cpp 395.longest_substring_with_at_least_k_repeating_characters/LongestSubstringWithAtLeastKRepeatingCharacters.h
        #28.strstr/StrStr.cpp 28.strstr/StrStr.h
        #36.valid_sudoku/ValidSudoku.cpp 36.valid_sudoku/ValidSudoku.h
        #38.count_and_say/CountAndSay.cpp 38.count_and_say/CountAndSay.h
        #41.first_missing_positive/FirstMissingPositive.cpp 41.first_missing_positive/FirstMissingPositive.h
        #44.wildcard_matching/WildcardMatching.cpp 44.wildcard_matching/WildcardMatching.h
        #54.spiral_matrix/SpiralMatrix.cpp 54.spiral_matrix/SpiralMatrix.h
        #66.plus_one/PlusOne.cpp 66.plus_one/PlusOne.h
        #69.sqrt_x/Sqrt.cpp 69.sqrt_x/Sqrt.h
        #73.set_matrix_zeroes/SetMatrixZeroes.cpp 73.set_matrix_zeroes/SetMatrixZeroes.h
        #88.merge_sorted_array/MergeSortedArray.cpp 88.merge_sorted_array/MergeSortedArray.h
        #91.decode_ways/DecodeWays.cpp 91.decode_ways/DecodeWays.h
        #103.binary_tree_zigzag_level_order_traversal/BinaryTreeZigzagLevelOrderTraversal.cpp 103.binary_tree_zigzag_level_order_traversal/BinaryTreeZigzagLevelOrderTraversal.h
        #108.convert_sorted_array_to_binary_search_tree/ConvertSortedArrayToBinarySearchTree.cpp 108.convert_sorted_array_to_binary_search_tree/ConvertSortedArrayToBinarySearchTree.h
        #116.populating_next_right_pointers_in_each_node/PopulatingNextRightPointersInEachNode.cpp 116.populating_next_right_pointers_in_each_node/PopulatingNextRightPointersInEachNode.h
        #118.pascals_triangle/PascalsTriangle.cpp 118.pascals_triangle/PascalsTriangle.h
        #122.best_time_to_buy_and_sell_stock_2/BestTimeToBuyAndSellStock2.cpp 122.best_time_to_buy_and_sell_stock_2/BestTimeToBuyAndSellStock2.h
        #125.valid_palindrome/ValidPalindrome.cpp 125.valid_palindrome/ValidPalindrome.h
        #127.word_ladder/WordLadder.cpp 127.word_ladder/WordLadder.h
        130.surrounded_regions/SurroundedRegions.cpp 130.surrounded_regions/SurroundedRegions.h
        )
